# test_project

./: .gitignore  README.md  db.sql  pyproject.toml
myproject/: settings.py  urls.py
test_project/: admin.py  apps.py  models.py  signals.py  views.py
test_project/migrations/: 0001_initial.py  0002_cart_cartitem.py
